--- a/index.html
+++ b/index.html
@@ -4,19 +4,30 @@
 <head>
   <meta charset="utf-8">
   <title>Dashboard</title>
+  <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css"/>
 </head>
 
 <body data-ng-init='init({})' data-ng-controller="appController">
 
-<table>
-	<tr data-ng-repeat="i in services.results | filter: serviceErrrorFilter">
-		<td>{{i.name}}</td>
-		<td>{{i.attrs.last_state}}</td>
-	</tr>
-</table>
-
+<div class="container">
+	<table class="table table-hover">
+		<tbody>
+			<tr data-ng-repeat="i in services.results | filter: serviceErrrorHardFilter">
+			<!--tr data-ng-repeat="i in services.results"-->
+				<td><span class="">{{$index}}</span> {{i.attrs.host_name}}</td>
+				<td>{{i.attrs.display_name}}</td>
+				<td>{{i.attrs.last_state}}</td>
+				<td>{{i.attrs.acknowledgement}}</td>
+				<td>{{i.attrs.last_check_result.output}}</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
 
 <script type="application/javascript" src="node_modules/angular/angular.js"></script>
+<script type="application/javascript" src="node_modules/angular-bootstrap/ui-bootstrap.js"></script>
+
 <script type="application/javascript" src="dashboard.js"></script>
 
 </body>
