--- a/index.html
+++ b/index.html
@@ -6,23 +6,76 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css"/>
+  <style type="text/css">
+  .banner {
+  	font-size: 5em;
+  	font-weight: bold;
+  	font-family: arial, helvetica, sans;
+  }
+  .crittbl {
+  	font-size: 2em;
+  }
+  </style>
 </head>
 
 <body data-ng-init='init({})' data-ng-controller="appController">
 
 <div class="container">
-	<table class="table table-hover">
+	<div class="banner alert alert-danger" role="alert">
+		<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		Critical
+		<span class="pull-right label label-danger">
+			{{services_critical}}
+			/
+			{{services_len}}
+		</span>
+	</div>
+	
+	<table class="table crittbl table-striped">
 		<tbody>
-			<tr data-ng-repeat="i in services.results | filter: serviceErrrorHardFilter">
+			<tr data-ng-repeat="i in services.results | filter: serviceErrrorCriticalFilter">
 			<!--tr data-ng-repeat="i in services.results"-->
-				<td><span class="">{{$index}}</span> {{i.attrs.host_name}}</td>
-				<td>{{i.attrs.display_name}}</td>
-				<td>{{i.attrs.last_state}}</td>
-				<td>{{i.attrs.acknowledgement}}</td>
-				<td>{{i.attrs.last_check_result.output}}</td>
+				<td><em>{{i.attrs.host_name.replace(".ms.uhbs.ch", "")}}</em><br/>
+				{{i.attrs.display_name}}</td>
+				<!--td>{{i.attrs.last_state}}</td>
+				<td>{{i.attrs.acknowledgement}}</td-->
+				<td data-ng-if="i.attrs.acknowledgement != 0">
+				<b>Aknowledged</b>
+				{{i.attrs.last_check_result.output}}</td>
+				<td data-ng-if="i.attrs.acknowledgement == 0">
+				{{i.attrs.last_check_result.output}}</td>
 			</tr>
 		</tbody>
 	</table>
+
+	<div class="banner alert alert-warning" role="alert">
+		<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+		Critical
+		<span class="pull-right label label-warning">
+			{{services_warning}}
+			/
+			{{services_len}}
+		</span>
+	</div>
+	
+	<table class="table crittbl table-striped">
+		<tbody>
+			<tr data-ng-repeat="i in services.results | filter: serviceErrrorWarningFilter">
+			<!--tr data-ng-repeat="i in services.results"-->
+				<td><em>{{i.attrs.host_name.replace(".ms.uhbs.ch", "")}}</em><br/>
+				{{i.attrs.display_name}}</td>
+				<!--td>{{i.attrs.last_state}}</td>
+				<td>{{i.attrs.acknowledgement}}</td-->
+				<td data-ng-if="i.attrs.acknowledgement != 0">
+				<b>Aknowledged</b>
+				{{i.attrs.last_check_result.output}}</td>
+				<td data-ng-if="i.attrs.acknowledgement == 0">
+				{{i.attrs.last_check_result.output}}</td>
+			</tr>
+		</tbody>
+	</table>
+
+
 </div>
 
 <script type="application/javascript" src="node_modules/angular/angular.js"></script>
