added deploy docs

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
 </div>
 
-<script type="application/javascript" src="node_modules/angular/angular.js"></script>
-<script type="application/javascript" src="node_modules/angular-bootstrap/ui-bootstrap.js"></script>
+<script type="application/javascript" src="node_modules/angular/angular.min.js"></script>
+<script type="application/javascript" src="node_modules/angular-bootstrap/ui-bootstrap.min.js"></script>
 
 <script type="application/javascript" src="dashboard.js"></script>
 
