--- a/index.html
+++ b/index.html
@@ -29,13 +29,77 @@
 
 		margin: auto;
 	}
+	
+	.container {
+		background: rgba(255, 255, 255, 0) ! important;
+	}
+	
+	.data, .data td, .data tr, .data tbody {
+		background: rgba(255, 255, 255, 0.4) ! important;
+	}
   
   </style>
+		
+	<!--script type="application/javascript">
+		// 2. This code loads the IFrame Player API code asynchronously.
+		var tag = document.createElement('script');
+
+		tag.src = "https://www.youtube.com/iframe_api";
+		var firstScriptTag = document.getElementsByTagName('script')[0];
+		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+		// 3. This function creates an <iframe> (and YouTube player)
+		//    after the API code downloads.
+		var player;
+		function onYouTubeIframeAPIReady() {
+		  player = new YT.Player('bgvideo', {
+		    height: '390',
+		    width: '640',
+		    videoId: 'M7lc1UVf-VE',
+		    events: {
+		      'onReady': onPlayerReady,
+		      'onStateChange': onPlayerStateChange
+		    }
+		  });
+		}
+
+		// 4. The API will call this function when the video player is ready.
+		function onPlayerReady(event) {
+		  // event.target.playVideo();
+		}
+
+		// 5. The API calls this function when the player's state changes.
+		//    The function indicates that when playing a video (state=1),
+		//    the player should play for six seconds and then stop.
+		var done = false;
+		function onPlayerStateChange(event) {
+		  if (event.data == YT.PlayerState.PLAYING && !done) {
+		    setTimeout(stopVideo, 6000);
+		    done = true;
+		  }
+			window.pass = {
+				start: player.playVideo,
+				stop: player.stopVideo
+			}
+		}
+		function stopVideo() {
+		  player.stopVideo();
+		}
+		
+		window.pass = {
+			start: null,
+			stop: null
+		}
+		
+	</script-->
+  
 </head>
 
-<body data-ng-init='init({})' data-ng-controller="appController">
+<body>
 
-<div class="container">
+<div id="bgvideo" style="position: fixed; z-index: -99; width: 100%; height: 100%; top:0px; left: 0px;"></div>
+
+<div class="container" data-ng-init='init()' data-ng-controller="appController">
 
 	<div data-ng-if="services_critical > 0">
 		<div class="banner alert alert-danger" role="alert">
@@ -48,12 +112,12 @@
 			</span>
 		</div>
 	
-		<table class="table crittbl table-striped">
+		<table class="table crittbl table-striped data">
 			<tbody>
 				<tr data-ng-repeat="i in services.results | filter: serviceErrrorCriticalFilter">
 				<!--tr data-ng-repeat="i in services.results"-->
-					<td><em>{{i.attrs.host_name.replace(".ms.uhbs.ch", "")}}</em><br/>
-					{{i.attrs.display_name}}</td>
+					<td><b>{{i.attrs.display_name}}</b><br/>
+					<em><small>{{i.attrs.host_name.replace(".ms.uhbs.ch", "").replace(".uhbs.ch", "").replace(".usb.ch", "")}}</small></em></td>
 					<!--td>{{i.attrs.last_state}}</td>
 					<td>{{i.attrs.acknowledgement}}</td-->
 					<td data-ng-if="i.attrs.acknowledgement != 0">
@@ -77,12 +141,12 @@
 			</span>
 		</div>
 	
-		<table class="table crittbl table-striped">
+		<table class="table crittbl table-striped data">
 			<tbody>
 				<tr data-ng-repeat="i in services.results | filter: serviceErrrorWarningFilter">
 				<!--tr data-ng-repeat="i in services.results"-->
-					<td><em>{{i.attrs.host_name.replace(".ms.uhbs.ch", "")}}</em><br/>
-					{{i.attrs.display_name}}</td>
+					<td><b>{{i.attrs.display_name}}</b><br/>
+					<em><small>{{i.attrs.host_name.replace(".ms.uhbs.ch", "").replace(".uhbs.ch", "").replace(".usb.ch", "")}}</small></em></td>
 					<!--td>{{i.attrs.last_state}}</td>
 					<td>{{i.attrs.acknowledgement}}</td-->
 					<td data-ng-if="i.attrs.acknowledgement != 0">
@@ -121,19 +185,15 @@
 		</tbody>
 	</table-->
 
-	<!-- background video -->
-	<!--div id="bgvideo" style="position: fixed; z-index: -99; width: 100%; height: 100%;"></div-->
-	<div id="bgvideo" style=""></div>
-	<!--div style="position: fixed; z-index: -99; width: 100%; height: 100%; display: none;">
-		<iframe frameborder="0" height="100%" width="100%" volume="0" 
-		  src="https://www.youtube.com/embed/RDfjXj5EGqI?&autoplay=1&loop=1&controls=0&showinfo=0&autohide=1">
-		</iframe>
-	</div-->
-
 </div>
 
-
-
+<!-- background video -->
+<!--div id="bgvideo" style="position: fixed; z-index: -99; width: 100%; height: 100%;"></div-->
+<!--div style="position: fixed; z-index: -99; width: 100%; height: 100%; display: none; top:0px; left: 0px;">
+	<iframe frameborder="0" height="100%" width="100%" volume="0" id="bgvideo" 
+	  src="https://www.youtube.com/embed/RDfjXj5EGqI?&autoplay=1&loop=1&controls=0&showinfo=0&autohide=1">
+	</iframe>
+</div-->
 
 <script type="application/javascript" src="node_modules/angular/angular.min.js"></script>
 <script type="application/javascript" src="node_modules/angular-bootstrap/ui-bootstrap.min.js"></script>
