added mobile options

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Dashboard</title>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes"/>
+  <link rel="apple-touch-icon" href="/launcher-icon-4x.png">
+  <meta name="apple-mobile-web-app-status-bar-style" content="white" />
   <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css"/>
   <style type="text/css">
